--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "devDependencies": {
     "@tauri-apps/cli": "^1.1.0",
     "@types/node": "^18.7.10",
+    "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue": "^3.0.1",
+    "naive-ui": "^2.34.2",
     "node-sass": "^8.0.0",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
