--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "ahridocs-client-rust",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "p": "tauri plugin init --name",
+    "key": "tauri signer generate -w cert/ahridocs.key"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.1.0",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "pinia": "^2.0.26",
     "vditor": "^3.8.18",
     "vue": "^3.2.37"
